# IPMerge

./: .gitignore  address.py  ipmerge.py  parameters.py  pyproject.toml
.github/workflows/: python-publish.yml
address/: address.py  address_block.py  ipv4.py  ipv6.py
src/ipmerge/: ipmerge.py  parameters.py
src/ipmerge/address/: address_block.py  ipv6.py
test_data/: china.txt  china_ipv6.txt  india.txt  india_ipv6.txt  ips.txt
