[project]
name = "IPMerge"
description = "Merge CIDR blocks of IPv4 and IPv6 addresses"
authors = [
    {name = "Vojtěch Kursa", email = "it.vojtechkursa@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest>=8.2.0",
]

[project.scripts]
ipmerge = "ipmerge.__main__:main"



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/ipmerge/__version__.py"
